# Poetry_Understanding

./: README.md
Poetry-project-1/: pyproject.toml
Poetry-project-2/: pyproject.toml
