[project]
name = "poetry-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "ShubhamCodeByte",email = "shubhamsingh22401@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry_project_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
